@@ -687,5 +687,9 @@ gdk_gc_copy (GdkGC *dst_gc, GdkGC *src_gc)
 
   src_private = (GdkGCPrivate *) src_gc;
   dst_private = (GdkGCPrivate *) dst_gc;
-  XCopyGC (src_private->xdisplay, src_private->xgc, 0xffff, dst_private->xgc);
+  /* Use a mask that covers all GC components. Could this generate
+   * a BadValue error ??? 
+   */
+  XCopyGC (src_private->xdisplay, src_private->xgc, 0xffffffff, 
+	   dst_private->xgc);
 }
